@@ -69,7 +69,8 @@
           (cond ((xhr-request-aborted-p req)
                  (setf *request-queue* (remove e *request-queue*))
                  (greeting req :abort t :nomsg nomsg)
-                 (run-hook-with-args '*xhr-abort-hook* req))
+                 (run-hook-with-args '*xhr-abort-hook* req)
+                 (fire-event handler :abort key req))
                 ((xhr-request-completed-p req)
                  (setf *request-queue* (remove e *request-queue*))
                  (let ((res (http-request->response req)))
